Product Manager at Moneybox. SFL Product Owner | SmartRecruiters. Job @ LILLYDOO (Frankfurt): Product Owner (f/m/d) | JOIN. Job Application for Senior Product Manager at Anaplan. VONQ Product Owner Business Process | SmartRecruiters. Allegro International Sellers Product Manager | SmartRecruiters. Groupe CANAL+ CDI - PRODUCT OWNER CRM INTERNATIONAL (H/F) | SmartRecruiters. NICE Careers - Product Manager- CXOne. Job Application for Product Designer at Mercari. Senior Product Designer job in Oslo, Norway at Ardoq. Benefitfocus Careers - Product Manager. Partners Internal Quality Control Senior Product Manager | SmartRecruiters. Ipsy Careers - Product Manager, Member Growth. Product Manager at Prolific. Recurly - Technical Data Product Manager. Recurly - Technical Data Product Manager. SFL Product Owner | SmartRecruiters. Job Application for Senior Product Manager at Deliveroo. Product Manager, Business Operations - Farmer's Fridge - Career Page. Benefitfocus Careers - Product Manager. Job Application for Senior Product Manager at Index Exchange. Astorian - Product Designer. Job Application for Product Designer III at 2U. Job Application for Senior Product Manager (f/m/x) - Supply Platform at Tourlane. Job Application for Senior Product Manager (f/m/x) - Supply Partner Onboarding at Tourlane. Medidata Solutions Careers - Senior Product Manager, Data Science. Job Application for Lead Product Designer H/F at The Fork. SFL Product Owner | SmartRecruiters. Product Manager - Trust &amp; Safety | PRODUCTHIRE.NET. Natixis Investment Managers Careers - Associate Legal Product Manager. Job Application for Product Designer, UX at ServiceTitan. Job Application for Product Designer Co-op at Copperleaf. Hunter Douglas Inc. Careers - Associate Product Manager.     Product Designer Sênior at Dito . Cermati.com Digital Product Owner (Entry, Mid and Senior Levels Available) | SmartRecruiters. Howden - Product Manager - Artificial Intelligence. Product Manager (m/f/d). American Products

--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,18 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://snap.hr/moneybox/job/product-manager/a9b5459dbc60eb14d55431f48f65f27b/'>Product Manager at Moneybox</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/SFL/743999698467045-product-owner'>SFL Product Owner | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://lillydoo.join.com/jobs/470348-product-owner-f-m-d'>Job @ LILLYDOO (Frankfurt): Product Owner (f/m/d) | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/anaplan/jobs/4472972002'>Job Application for Senior Product Manager at Anaplan</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
@@ -104,7 +116,7 @@
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oClmbfwe&__jvst=Employee&__jvsd=s8C2Kgwh&__jvsc=Twitter&bid=nFXcoMwt'>Benefitfocus Careers - Product Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oClmbfwe&__jvst=Employee&__jvsd=s8C2Kgwh&__jvsc=Twitter&bid=nFXcoMwt'>Benefitfocus Careers - Product Manager</a></h5> 
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -218,7 +230,7 @@
 <p><span class="badge badge-light">New York  San Francisco NYCLondon</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bark.recruiterbox.com/jobs/fk03o6r/'>
+<h5><a href='https://bark.recruiterbox.com/jobs/fk03o6r/'>
     Senior Product Designer at Bark
 </a></h5> 
 <p><span class="badge badge-light">London</span></p>
@@ -303,7 +315,7 @@ online education programs and Physician customer relationship management?...</p>
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PointsInternational/743999698407469-product-designer'>Points International Product Designer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PointsInternational/743999698407469-product-designer'>Points International Product Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Richmond Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -315,7 +327,7 @@ online education programs and Physician customer relationship management?...</p>
 <p><span class="badge badge-light">Austin, Texas United States  Austin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/knockrentals/9c9feaa5-ddb7-48af-9136-51cd415a5cd0'>Knock, Inc - Senior Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/knockrentals/9c9feaa5-ddb7-48af-9136-51cd415a5cd0'>Knock, Inc - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -388,7 +400,7 @@ and explicitly agree to the our Applicants Privacy Policy. Apply for this job.</
 <p><span class="badge badge-light">Prague, Czech Republic</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://producthire.net/job/product-designer-spotify-free/'>Product Designer, Spotify Free | PRODUCTHIRE.NET</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://producthire.net/job/product-designer-spotify-free/'>Product Designer, Spotify Free | PRODUCTHIRE.NET</a></h5> 
 <p><span class="badge badge-light">New York, USA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -404,7 +416,7 @@ and explicitly agree to the our Applicants Privacy Policy. Apply for this job.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TRICENTIS/743999698368429-product-owner-sap'>TRICENTIS Product Owner SAP | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TRICENTIS/743999698368429-product-owner-sap'>TRICENTIS Product Owner SAP | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -440,18 +452,6 @@ and explicitly agree to the our Applicants Privacy Policy. Apply for this job.</
       Product Manager - xneelo
     </a></h5> 
 <p><span class="badge badge-light">Cape Town South Africa  Cape Town Vancouver</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://hellomavis.com/job/senior-product-manager-for-healthcare-app-3/'>Senior Product Manager (for Healthcare App) - Mavis</a></h5> 
-<p><span class="badge badge-light">London</span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/twitch/jobs/4495580002'>Job Application for Senior Product Manager at Twitch</a></h5> 
-<p><span class="badge badge-light">San Francisco, CA</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698354337-senior-product-manager-monetisation-m-f-d-'>Omio Senior Product Manager, Monetisation (m / f / d) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
